WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143947
HashMap storing PropertyKey StringImpl* need to use IdentifierRepHash to handle Symbols
https://bugs.webkit.org/show_bug.cgi?id=143947
Summary
HashMap storing PropertyKey StringImpl* need to use IdentifierRepHash to hand...
Yusuke Suzuki
Reported
2015-04-20 01:07:23 PDT
HashMap storeing PropertyKey StringImpl* need to use IdentifierRepHash to handle Symbols
Attachments
Patch
(1.95 KB, patch)
2015-04-20 01:53 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(1.98 KB, patch)
2015-04-20 01:57 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(1.98 KB, patch)
2015-04-20 01:58 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2015-04-20 01:53:58 PDT
Created
attachment 251155
[details]
Patch
Yusuke Suzuki
Comment 2
2015-04-20 01:55:14 PDT
Could anyone take a look? It fixes JSC test failures in 32bit debug builds.
https://build.webkit.org/builders/Apple%20Mavericks%2032-bit%20JSC%20%28BuildAndTest%29
WebKit Commit Bot
Comment 3
2015-04-20 01:55:45 PDT
Attachment 251155
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/ChangeLog:11: Line contains tab character. [whitespace/tab] [5] Total errors found: 4 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yusuke Suzuki
Comment 4
2015-04-20 01:57:37 PDT
Created
attachment 251156
[details]
Patch
Yusuke Suzuki
Comment 5
2015-04-20 01:58:42 PDT
Created
attachment 251157
[details]
Patch
Geoffrey Garen
Comment 6
2015-04-20 11:31:10 PDT
Comment on
attachment 251157
[details]
Patch Ha! I just had to fix this bug for another patch!
Geoffrey Garen
Comment 7
2015-04-20 11:46:13 PDT
Comment on
attachment 251157
[details]
Patch Marking cq+ because we need this fix to fix the crash seen in
https://build.webkit.org/builders/Apple%20Yosemite%20Debug%20JSC%20%28Tests%29/builds/908/steps/jscore-test/logs/stdio
.
WebKit Commit Bot
Comment 8
2015-04-20 12:36:35 PDT
Comment on
attachment 251157
[details]
Patch Clearing flags on attachment: 251157 Committed
r183022
: <
http://trac.webkit.org/changeset/183022
>
WebKit Commit Bot
Comment 9
2015-04-20 12:36:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug