HashMap storing PropertyKey StringImpl* need to use IdentifierRepHash to handle Symbols https://bugs.webkit.org/show_bug.cgi?id=143947

Reviewed by Darin Adler.

Type profiler has map between PropertyKey (StringImpl*) and offset.
StringImpl* is also used for Symbol PropertyKey.
So equality of hash tables is considered by interned StringImpl*'s pointer value.
To do so, use IdentifierRepHash instead of StringHash.

* runtime/SymbolTable.h:


Canonical link: https://commits.webkit.org/161943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183022 268f45cc-cd09-0410-ab3c-d52691b4dbfc